--- a/.github/workflows/executar_script.yml
+++ b/.github/workflows/executar_script.yml
@@ -2,7 +2,10 @@ name: Executar script Python a cada 30 minutos
 
 on:
   schedule:
-    - cron: '*/50 * * * 1-5'  # Executa a cada 30 minutos
+    # Das 11h às 13h59 – a cada 30 minutos
+    - cron: '0,30 11-13 * * 1-5'
+    # Das 14h às 22h – uma vez por hora
+    - cron: '0 14-22 * * 1-5'
   workflow_dispatch:         # Permite executar manualmente
 
 jobs:
