--- a/.github/workflows/executar_script.yml
+++ b/.github/workflows/executar_script.yml
@@ -2,11 +2,17 @@ name: Executar script Python a cada 30 minutos
 
 on:
   schedule:
-    # Das 11h às 13h59 – a cada 30 minutos
-    - cron: '0,30 11-13 * * 1-5'
-    # Das 14h às 22h – uma vez por hora
-    - cron: '0 14-22 * * 1-5'
-  workflow_dispatch:         # Permite executar manualmente
+    - cron: '30 11 * * 1-5'
+    - cron: '30 12 * * 1-5'
+    - cron: '30 13 * * 1-5'
+    - cron: '30 14 * * 1-5'
+    - cron: '30 16 * * 1-5'
+    - cron: '30 17 * * 1-5'
+    - cron: '30 18 * * 1-5'
+    - cron: '30 19 * * 1-5'
+    - cron: '30 20 * * 1-5'
+    - cron: '30 21 * * 1-5'
+  workflow_dispatch:  # Permite executar manualmente
 
 jobs:
   run-script:
