--- a/.github/workflows/executar_script.yml
+++ b/.github/workflows/executar_script.yml
@@ -3,9 +3,13 @@ name: Executar script Python a cada 30 minutos
 on:
   schedule:
     - cron: '20 11 * * 1-5'
+    - cron: '50 11 * * 1-5'
     - cron: '20 12 * * 1-5'
+    - cron: '50 12 * * 1-5'
     - cron: '20 13 * * 1-5'
+    - cron: '50 13 * * 1-5'
     - cron: '20 14 * * 1-5'
+    - cron: '50 14 * * 1-5'
     - cron: '20 16 * * 1-5'
     - cron: '20 17 * * 1-5'
     - cron: '20 18 * * 1-5'
