--- a/.github/workflows/executar_script.yml
+++ b/.github/workflows/executar_script.yml
@@ -2,21 +2,9 @@ name: Executar script Python a cada 30 minutos
 
 on:
   schedule:
-    - cron: '20 08 * * 1-5'
-    - cron: '50 08 * * 1-5'
-    - cron: '20 09 * * 1-5'
-    - cron: '50 09 * * 1-5'
-    - cron: '20 10 * * 1-5'
-    - cron: '50 10 * * 1-5'
-    - cron: '20 11 * * 1-5'
-    - cron: '50 11 * * 1-5'
-    - cron: '20 13 * * 1-5'
-    - cron: '20 14 * * 1-5'
-    - cron: '20 15 * * 1-5'
-    - cron: '20 16 * * 1-5'
-    - cron: '20 17 * * 1-5'
-    - cron: '20 18 * * 1-5'
+    - cron: "*/30 8-22 * * 1-5"
   workflow_dispatch:  # Permite executar manualmente
+
 
 jobs:
   run-script:
