--- a/.github/workflows/executar_script.yml
+++ b/.github/workflows/executar_script.yml
@@ -27,6 +27,20 @@ jobs:
         run: |
           echo '${{ secrets.GOOGLE_CREDS }}' > credenciais.json
 
+      - name: Instalar Google Chrome
+        run: |
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+
+      - name: Instalar ChromeDriver
+        run: |
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+\.\d+')
+          DRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
+          wget https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
+          
       - name: ▶️ Executar o script
         env:
           USUARIO_WS: ${{ secrets.USUARIO_WS }}
