--- a/.github/workflows/executar_script.yml
+++ b/.github/workflows/executar_script.yml
@@ -5,7 +5,6 @@ on:
     - cron: "*/8 11-21 * * 1-5"
   workflow_dispatch:  # Permite executar manualmente
 
-
 jobs:
   run-script:
     runs-on: ubuntu-latest
@@ -19,28 +18,29 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: 📦 Instalar dependências
+      - name: 🧩 Instalar o Google Chrome
         run: |
-          pip install pandas zeep google-auth google-api-python-client python-dateutil
+          sudo apt-get update
+          sudo apt-get install -y wget unzip
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+
+      - name: 🛠️ Instalar o ChromeDriver
+        run: |
+          CHROME_VERSION=$(google-chrome --version | cut -d ' ' -f 3 | cut -d '.' -f 1)
+          wget -q "https://chromedriver.storage.googleapis.com/$(curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION)/chromedriver_linux64.zip"
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
+
+      - name: 📦 Instalar dependências Python
+        run: |
+          pip install pandas zeep google-auth google-api-python-client google-auth-oauthlib google-auth-httplib2 python-dateutil selenium
 
       - name: 🔐 Criar credenciais do Google
         run: |
           echo '${{ secrets.GOOGLE_CREDS }}' > credenciais.json
 
-      - name: Instalar Google Chrome
-        run: |
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install -y ./google-chrome-stable_current_amd64.deb
-
-      - name: Instalar ChromeDriver
-        run: |
-          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+\.\d+')
-          DRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
-          wget https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
-          
       - name: ▶️ Executar o script
         env:
           USUARIO_WS: ${{ secrets.USUARIO_WS }}
