--- a/.github/workflows/executar_script.yml
+++ b/.github/workflows/executar_script.yml
@@ -5,6 +5,7 @@ on:
     - cron: "*/8 11-21 * * 1-5"
   workflow_dispatch:  # Permite executar manualmente
 
+
 jobs:
   run-script:
     runs-on: ubuntu-latest
@@ -18,32 +19,16 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: 🧩 Instalar o Google Chrome
+      - name: 📦 Instalar dependências
         run: |
-          sudo apt-get update
-          sudo apt-get install -y wget unzip
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install -y ./google-chrome-stable_current_amd64.deb
-
-      - name: 🛠️ Instalar o ChromeDriver
-        run: |
-          CHROME_VERSION=$(google-chrome --version | cut -d ' ' -f 3 | cut -d '.' -f 1)
-          wget -q "https://chromedriver.storage.googleapis.com/$(curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION)/chromedriver_linux64.zip"
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
-
-      - name: 📦 Instalar dependências Python
-        run: |
-          pip install pandas zeep google-auth google-api-python-client google-auth-oauthlib google-auth-httplib2 python-dateutil selenium
+          pip install pandas zeep google-auth google-api-python-client python-dateutil
 
       - name: 🔐 Criar credenciais do Google
         run: |
           echo '${{ secrets.GOOGLE_CREDS }}' > credenciais.json
-
+          
       - name: ▶️ Executar o script
         env:
           USUARIO_WS: ${{ secrets.USUARIO_WS }}
           SENHA_WS: ${{ secrets.SENHA_WS }}
         run: python main.py
-
