--- a/.github/workflows/executar_script.yml
+++ b/.github/workflows/executar_script.yml
@@ -3,6 +3,8 @@ name: 1 - Executar script Python a cada 8 minutos
 on:
   schedule:
     - cron: "00,30 * * * 1-5"
+    - cron: "0 18 * * 6,0"
+
   workflow_dispatch:  # Permite executar manualmente
 
 
