--- a/.github/workflows/Executar Script2.yml
+++ b/.github/workflows/Executar Script2.yml
@@ -3,6 +3,7 @@ name: 2 - Executar script Python a cada 8 minutos
 on:
   schedule:
     - cron: "10,40 * * * 1-5"
+    - cron: "0 19 * * 6,0"
   workflow_dispatch:  # Permite executar manualmente
 
 
