--- a/.github/workflows/executarScript3.yml
+++ b/.github/workflows/executarScript3.yml
@@ -3,6 +3,7 @@ name: 3 - Executar script Python a cada 8 minutos
 on:
   schedule:
     - cron: "20,50 * * * 1-5"
+    - cron: "0 20 * * 6,0"    
   workflow_dispatch:  # Permite executar manualmente
 
 
