--- a/.github/workflows/executar_script.yml
+++ b/.github/workflows/executar_script.yml
@@ -2,11 +2,9 @@ name: 1 - Executar script Python a cada 8 minutos
 
 on:
   schedule:
-    - cron: "00,30 * * * 1-5"
-    - cron: "0 18 * * 6,0"
-
-  workflow_dispatch:  # Permite executar manualmente
-
+    - cron: "00,30 * * * 1-5"   # Seg-Sex: 00 e 30 de cada hora
+    - cron: "0 18 * * 6,0"      # Sáb/Dom: 18:00
+  workflow_dispatch:            # Execução manual
 
 jobs:
   run-script:
@@ -23,12 +21,12 @@ jobs:
 
       - name: 📦 Instalar dependências
         run: |
-          pip install pandas zeep packaging google-auth google-api-python-client python-dateutil
+          pip install pandas requests google-auth google-auth-httplib2 google-auth-oauthlib google-api-python-client python-dateutil
 
       - name: 🔐 Criar credenciais do Google
         run: |
           echo '${{ secrets.GOOGLE_CREDS }}' > credenciais.json
-          
+
       - name: ▶️ Executar o script
         env:
           USUARIO_WS: ${{ secrets.USUARIO_WS }}
