--- a/.github/workflows/Executar Script2.yml
+++ b/.github/workflows/Executar Script2.yml
@@ -6,7 +6,6 @@ on:
     - cron: "0 19 * * 6,0"
   workflow_dispatch:  # Permite executar manualmente
 
-
 jobs:
   run-script:
     runs-on: ubuntu-latest
@@ -22,12 +21,12 @@ jobs:
 
       - name: 📦 Instalar dependências
         run: |
-          pip install pandas zeep packaging google-auth google-api-python-client python-dateutil
+          pip install pandas requests google-auth google-auth-httplib2 google-auth-oauthlib google-api-python-client python-dateutil
 
       - name: 🔐 Criar credenciais do Google
         run: |
           echo '${{ secrets.GOOGLE_CREDS }}' > credenciais.json
-          
+
       - name: ▶️ Executar o script
         env:
           USUARIO_WS: ${{ secrets.USUARIO_WS }}
